add a statement for which player wins and begin to add code for computer ai
Co-authored-by: Matt McFarland <mrmcfarland@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
 h1 {
   margin-left: 50px;
 }
+
+#player-1-wins {
+  display: none;
+}
+
+#player-2-wins {
+  display: none;
+}
+
+#draw {
+  display: none;
+}
