--- a/css/styles.css
+++ b/css/styles.css
@@ -13,3 +13,10 @@ h1 {
 #draw {
   display: none;
 }
+
+#player-turn {
+  display: inline-block;
+  position: absolute;
+  font-size: 20px;
+  font-weight: 550;
+}
