--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  margin-left: 50px;
+  margin-left: 80px;
 }
 
 #player-1-wins {
@@ -19,4 +19,21 @@ h1 {
   position: absolute;
   font-size: 20px;
   font-weight: 550;
+}
+
+#canvas {
+  width: 330px;
+  height: 330px;
+  border: 5px solid black;
+  display: inline-block;
+  background-color:  rgb(216, 233, 171);
+}
+
+canvas {
+  margin: 11px;
+}
+
+#resetGame {
+  margin-left: 50px;
+
 }
